# CSparse

./: CMakeLists.txt  README
lib/: libcsparse.so.2.2.1
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/csparse/: CMakeLists.txt
