# ==============================================================================
# CSparse CMake File
# ==============================================================================

CMAKE_MINIMUM_REQUIRED(VERSION 2.5 FATAL_ERROR)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

PROJECT(CSparse)

# define project name ----------------------------------------------------------
SET(CSPARSE_VERSION 2.2.1)

# what languages we use --------------------------------------------------------
ENABLE_LANGUAGE(CXX)

# ==============================================================================
# output directories -----------------------------------------------------------
# ==============================================================================

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

# ==============================================================================
# conditional setup ------------------------------------------------------------
# ==============================================================================

SET(LIBS_SHARED       ON  CACHE BOOL "Should the shared version of csparse library be built?")
SET(LIBS_STATIC       OFF CACHE BOOL "Should the static version of csparse library be built?")

# ==============================================================================
# project subdirectories  ------------------------------------------------------
# ==============================================================================

ADD_SUBDIRECTORY(src)
